[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] } # CORS設定用（必須）
dotenvy = "0.15" # 環境変数(.env)読み込み用（必須）
serde = { version = "1.0", features = ["derive"] } # JSON変換用
serde_json = "1.0"